# RMCpasteplus

./: CMakeLists.txt  LICENSE  README.md  mingw-toolchain.cmake
.github/workflows/: ci.yml  release.yml
src/: paster-plus-plus.cpp  paster-plus-plus.h  paster-plus-plus.rc
